crates/pina_cli/tests/snapshots/cli_snapshots__lint_help.snap
---
source: crates/pina_cli/tests/cli_snapshots.rs
info:
  program: pina
  args:
    - lint
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Run Pina's official security lints against the current program.

Discovers the nearest pina.toml or Cargo package, resolves a `pina_lint_driver` built for the project's active toolchain, and runs cargo check with the driver as `RUSTC_WORKSPACE_WRAPPER`. Lint levels configured in the [lints] table of pina.toml are honored. Use --fix to apply machine-applicable suggestions; review every resulting source change.

Usage: pina lint [OPTIONS]

Options:
  -p, --project <DIR>
          Directory inside the project to discover. Defaults to the current directory

      --fix
          Apply machine-applicable lint suggestions to the working tree

      --build-driver
          Build the lint driver from source with the active toolchain.
          
          Use this on a toolchain Pina publishes no prebuilt driver for. The build compiles the `pina_lints` release matching this CLI, so it needs the `rustc-dev` and `rust-src` components of the active toolchain.

      --explain <LINT>
          Print the full reference for one lint and exit without linting.
          
          Accepts the lint name, with or without the `pina::` prefix. The same reference is available for every lint under `docs/src/lint-reference.md`.

  -h, --help
          Print help (see a summary with '-h')

Examples:
  pina lint
  pina lint --fix
  pina lint --project ./programs/counter
  pina lint --explain require_zeroed_before_close
  pina lint --build-driver

Tooling:
  A lint driver only loads against the exact compiler revision it was built with, so `pina lint` resolves one for the toolchain the project activates: the bundled driver when it matches, a driver cached for that revision, or a download from this CLI's release. A toolchain Pina publishes no driver for can be linted with --build-driver, which compiles the driver from the matching pina_lints release using the active toolchain, and `pina doctor` reports the resolved driver and the remedy when none is available. --fix applies only machine-applicable suggestions and allows Cargo to edit dirty, staged, or not-yet-versioned working trees; inspect the diff before committing.

----- stderr -----
