crates/pina_cli/tests/snapshots/cli_snapshots__profile_help.snap
---
source: crates/pina_cli/tests/cli_snapshots.rs
info:
  program: pina
  args:
    - profile
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Profile compute-unit costs in a compiled SBF program.

Performs static analysis of an SBF shared object. Text is written to stdout by default. Use --json for machine-readable output and --output to write either format to a file. Use `pina profile compare` to diff a saved baseline report against the current artifact, and `pina profile trace` to measure executed compute units line by line from the project's Mollusk tests.

Usage: pina profile [OPTIONS] [PROGRAM.SO] [COMMAND]

Commands:
  compare
          Compare the current artifact against a saved baseline profile report
  trace
          Measure where each instruction's compute units go, line by line
  help
          Print this message or the help of the given subcommand(s)

Arguments:
  [PROGRAM.SO]
          Compiled SBF shared object. Omit to discover the current project's artifact

Options:
      --project <DIR>
          Project used for artifact discovery when PROGRAM.SO is omitted

      --json
          Emit machine-readable JSON instead of the text report

  -o, --output <FILE>
          Write the report to FILE instead of stdout

  -h, --help
          Print help (see a summary with '-h')

Examples:
  pina profile
  pina profile --json
  pina profile --project ./programs/counter_program
  pina profile ./target/deploy/counter_program.so --json
  pina profile ./target/deploy/counter_program.so --json -o ./profile.json
  pina profile compare ./profile.json
  pina profile compare ./profile.json ./target/deploy/counter_program.so --json
  pina profile compare ./profile.json --fail-cu 100 --fail-percent 5
  pina profile trace --instruction increment

Baselines:
  compare accepts any report written by `pina profile --json`, including the versioned baseline document. The exit status is 2 when the total CU regression reaches both --fail-cu and --fail-percent, so local runs mirror the CI compute-unit gate.

----- stderr -----
