crates/pina_cli/tests/snapshots/cli_snapshots__root_help.snap
---
source: crates/pina_cli/tests/cli_snapshots.rs
info:
  program: pina
  args:
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Build, test, inspect, and generate artifacts for Pina Solana programs.

Use 'pina init' to start a program, 'pina lint' for the official security lint set, 'pina build' for its SBF binary and IDL, 'pina test' for SBF integration, 'pina test --unit' for the fast native/Mollusk loop, 'pina dev' for a persistent Surfpool network, 'pina generate' for selected client ecosystems, 'pina deploy' for explicit cluster deployment, and 'pina verify' for deployed-program verification. Use 'pina cpi' for standalone CPI crates, 'pina import' to adopt another program's IDL as one, 'pina doctor' for agent-readable diagnostics, 'pina keys' for program identity, and 'pina completions' for shell integration. Low-level IDL, profiling, and terminal documentation remain available.

Usage: pina <COMMAND>

Commands:
  build
          Build the current Pina program for SBF and generate its IDL
  lint
          Run Pina's official security lints against the current program
  locks
          Report which instructions can never run in parallel
  migrations
          Create and verify checked-in ABI migrations
  abi
          Inspect the Pina ABI document contract
  generate
          Generate configured clients for the current Pina program
  cpi
          Generate a standalone Pina CPI crate from a Codama or Anchor IDL
  import
          Import a foreign program's IDL as a supported CPI crate
  idl
          Generate, inspect, and publish canonical Codama IDLs
  docs
          Read bundled Pina reference documentation in the terminal
  skill
          Read or install the bundled Pina agent skill
  snapshot
          Print a normalized JSON snapshot of the CLI surface
  init
          Initialize a new Pina program project
  keys
          Inspect or synchronize the current program's identity
  doctor
          Diagnose the current project and development toolchain
  explain
          Explain why a transaction to the current program failed
  completions
          Generate shell completion scripts
  test
          Test a Pina program with fast native tests or an isolated Surfpool instance
  dev
          Start a persistent Surfpool development network with SBF watch and redeploy
  profile
          Profile compute-unit costs in a compiled SBF program
  verify
          Verify deployed programs and publish source-build records
  deploy
          Deploy a compiled Pina program through the Solana CLI
  help
          Print this message or the help of the given subcommand(s)

Options:
  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

Examples:
  pina init counter_program
  cd counter_program && pina build
  pina lint
  pina test
  pina test --unit
  pina dev --yes
  pina generate --client rust --client typescript
  pina doctor --json
  pina keys
  pina cpi --idl ./idl.json --output ./clients/program-cpi
  pina import switchboard --program-id SBondMDrcV3K4kxZR1HNVT7osZxAHVHgYXL5Ze1oMUv --idl ./idl.json
  pina idl --path ./programs/counter_program --output ./idls/counter_program.json
  pina profile ./target/deploy/counter_program.so --json
  pina deploy --cluster localnet --payer ~/.config/solana/id.json --upgrade-authority ~/.config/solana/id.json --dry-run

Agent discovery:
  Run 'pina <command> --help' for command-specific inputs, outputs, and examples.
  Run 'pina docs' to list the bundled architecture and IDL reference topics.
  Run 'pina skill read pina' to read the bundled agent skill, or 'pina skill install --dir <directory>' to install it for an agent runtime.
  For deployment verification, run 'pina verify --help' and then inspect the selected leaf command.

----- stderr -----
